# flodl

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.bench  Dockerfile.cpu  Dockerfile.cuda  Dockerfile.cuda.source  Makefile  README.md  ROADMAP.md  SECURITY.md  UPGRADE.md  docker-compose.yml  download-libtorch.sh  fdl  fdl.cluster.yml.example  fdl.yaml  fdl.yml.example  init.sh
flodl/: Cargo.toml
flodl-cli/: Cargo.toml  README.md
flodl-cli-macros/: Cargo.toml  README.md
flodl-cli-macros/src/: lib.rs
flodl-cli/assets/: Dockerfile.cuda.source  fdl
flodl-cli/assets/skills/: port-guide.md
flodl-cli/src/: add.rs  api_ref.rs  builtins.rs  cluster.rs  completions.rs  config.rs  context.rs  diagnose.rs  dispatch.rs  gpus.rs  init.rs  lib.rs  main.rs  overlay.rs  run.rs  schema.rs  schema_cache.rs  setup.rs  skill.rs  style.rs  update_check.rs
flodl-cli/src/args/: mod.rs  parser.rs
flodl-cli/src/libtorch/: build.rs  detect.rs  download.rs  manage.rs  mod.rs
flodl-cli/src/scaffold/: .gitignore  README.md  fdl.yml.example
flodl-cli/src/util/: archive.rs  cargo_toml.rs  docker.rs  fdl_yml.rs  http.rs  install_prompt.rs  mod.rs  prompt.rs  system.rs
flodl-hf/: Cargo.toml  LICENSE  README.md  fdl.yml.example
flodl-hf/convert/: fdl.yml.example
flodl-hf/examples/: auto_classify.rs  bert_classify.rs  bert_embed.rs  bert_ner.rs  bert_qa.rs  distilbert_classify.rs  distilbert_embed.rs  distilbert_finetune.rs  distilbert_ner.rs  distilbert_qa.rs  export_hf.rs  fdl.yml.example  roberta_classify.rs  roberta_embed.rs  roberta_ner.rs  roberta_qa.rs
flodl-hf/export/: fdl.yml.example
flodl-hf/parity/: fdl.yml.example
flodl-hf/scaffold/: Cargo.toml
flodl-hf/scaffold/src/: main.rs
flodl-hf/scripts/: Dockerfile.parity  _export_verify.py  _hf_cache_utils.py  convert_bin_to_safetensors.py  parity_albert.py  parity_albert_mlm.py  parity_albert_qa.py  parity_albert_seqcls.py  parity_albert_tokencls.py  parity_all.py  parity_bert.py  parity_bert_mlm.py  parity_bert_qa.py  parity_bert_seqcls.py  parity_bert_tokencls.py  parity_deberta_v2.py  parity_deberta_v2_qa.py  parity_deberta_v2_seqcls.py  parity_deberta_v2_tokencls.py  parity_distilbert.py  parity_distilbert_mlm.py  parity_distilbert_qa.py  parity_distilbert_seqcls.py  parity_distilbert_tokencls.py  parity_roberta.py  parity_roberta_mlm.py  parity_roberta_qa.py  parity_roberta_seqcls.py  parity_roberta_tokencls.py  parity_xlm_roberta.py  parity_xlm_roberta_mlm.py  parity_xlm_roberta_qa.py  parity_xlm_roberta_seqcls.py  parity_xlm_roberta_tokencls.py  verify_export.py  verify_export_albert.py  verify_export_bert.py  verify_export_deberta_v2.py  verify_export_distilbert.py  verify_export_roberta.py  (+3 more)
flodl-hf/src/: config_json.rs  export.rs  hub.rs  lib.rs  path.rs  safetensors_io.rs  task_heads.rs  tokenizer.rs
flodl-hf/src/hub/: albert.rs  auto.rs  bert.rs  deberta_v2.rs  distilbert.rs  mod.rs  roberta.rs  xlm_roberta.rs
flodl-hf/src/models/: albert.rs  auto.rs  bert.rs  deberta_transformer_layer.rs  deberta_v2.rs  distilbert.rs  mod.rs  roberta.rs  transformer_layer.rs  xlm_roberta.rs
flodl-hf/tests/: albert_cuda_smoke.rs  albert_export_roundtrip.rs  albert_head_export_roundtrip.rs  albert_mlm_parity.rs  albert_parity.rs  albert_qa_parity.rs  albert_roundtrip.rs  albert_seqcls_parity.rs  albert_tokencls_parity.rs  bert_cuda_smoke.rs  bert_export_roundtrip.rs  bert_head_export_roundtrip.rs  bert_mlm_parity.rs  bert_parity.rs  bert_qa_parity.rs  bert_roundtrip.rs  bert_seqcls_parity.rs  bert_tokencls_parity.rs  checkpoint_export_soak.rs  deberta_v2_cuda_smoke.rs  deberta_v2_export_roundtrip.rs  deberta_v2_head_export_roundtrip.rs  deberta_v2_parity.rs  deberta_v2_qa_parity.rs  deberta_v2_roundtrip.rs  deberta_v2_seqcls_parity.rs  deberta_v2_tokencls_parity.rs  distilbert_cuda_smoke.rs  distilbert_export_roundtrip.rs  distilbert_head_export_roundtrip.rs  distilbert_mlm_parity.rs  distilbert_parity.rs  distilbert_qa_parity.rs  distilbert_roundtrip.rs  distilbert_seqcls_parity.rs  distilbert_tokencls_parity.rs  roberta_cuda_smoke.rs  roberta_export_roundtrip.rs  roberta_head_export_roundtrip.rs  roberta_mlm_parity.rs  (+15 more)
flodl-hf/tests/common/: mod.rs
flodl-hf/tests/fixtures/: albert_base_v2_parity.safetensors  albert_mlm_parity.safetensors  albert_qa_parity.safetensors  albert_seqcls_parity.safetensors  albert_tokencls_parity.safetensors  bert_base_uncased_parity.safetensors  bert_mlm_parity.safetensors  bert_qa_parity.safetensors  bert_seqcls_parity.safetensors  bert_tokencls_parity.safetensors  deberta_v2_parity.safetensors  deberta_v2_qa_parity.safetensors  deberta_v2_seqcls_parity.safetensors  deberta_v2_tokencls_parity.safetensors  distilbert_base_parity.safetensors  distilbert_mlm_parity.safetensors  distilbert_qa_parity.safetensors  distilbert_seqcls_parity.safetensors  distilbert_tokencls_parity.safetensors  head_matrix.json  roberta_base_parity.safetensors  roberta_mlm_parity.safetensors  roberta_qa_parity.safetensors  roberta_seqcls_parity.safetensors  roberta_tokencls_parity.safetensors  xlm_roberta_base_parity.safetensors  xlm_roberta_qa_parity.safetensors  xlm_roberta_seqcls_parity.safetensors  xlm_roberta_tokencls_parity.safetensors
flodl-hf/tests/parity_common/: mod.rs
flodl-hf/tests/roundtrip_common/: mod.rs
flodl-hf/verify-export/: fdl.yml.example
flodl-hf/verify-matrix/: fdl.yml.example
flodl-sys/: Cargo.toml  README.md  build.rs  helpers.h  ops_cuda.cpp  ops_math_ext.cpp  ops_nn.cpp  ops_tensor.cpp  ops_training.cpp  shim.cpp  shim.h
flodl-sys/src/: lib.rs
flodl/examples/: quickstart.rs  showcase.dot  showcase.rs  showcase_profile.dot  showcase_training.html  sine_wave.rs
flodl/examples/flowbuilder_residual/: README.md  main.rs
flodl/examples/mixed_precision/: README.md  main.rs
flodl/examples/observation/: README.md  main.rs
flodl/examples/quickstart/: README.md  main.rs
flodl/examples/schedulers/: README.md  main.rs
flodl/examples/showcase/: README.md  main.rs  (+3 more)
flodl/src/: lib.rs  log.rs  rng.rs  tensor.rs  worker.rs
(+502 files in other folders)
