[workspace]
members = ["flodl-sys", "flodl", "flodl-cli", "flodl-cli-macros"]
exclude = ["benchmarks", "ddp-bench"]
resolver = "2"

[workspace.package]
version = "0.5.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/fab2s/floDl"
homepage = "https://flodl.dev"
