[workspace]
members = ["flodl-sys", "flodl", "flodl-cli", "flodl-cli-macros", "flodl-hf"]
exclude = ["benchmarks", "ddp-bench"]
resolver = "2"

[workspace.package]
version = "0.5.3"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/flodl-labs/flodl"
homepage = "https://flodl.dev"
