[package]
name = "flodl-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "libtorch manager and GPU diagnostic tool for Rust deep learning"
readme = "README.md"
keywords = ["libtorch", "pytorch", "cuda", "deep-learning", "gpu"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
flodl-cli-macros = { path = "../flodl-cli-macros", version = "=0.5.0" }

[lib]
name = "flodl_cli"
path = "src/lib.rs"

[[bin]]
name = "fdl"
path = "src/main.rs"
