[package]
name = "flodl-hf"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "HuggingFace integration for flodl: safetensors, hub, tokenizers, pre-built models"
readme = "README.md"
keywords = ["huggingface", "transformers", "safetensors", "deep-learning", "flodl"]
categories = ["science", "artificial-intelligence"]
include = [
    "src/**/*",
    "README.md",
    "Cargo.toml",
]

[features]
default = ["hub", "tokenizer"]
cuda = ["flodl/cuda"]
hub = ["hf-hub"]
tokenizer = ["tokenizers"]

[dependencies]
flodl = { version = "=0.5.2", path = "../flodl" }
safetensors = "0.4"
serde_json = "1"
hf-hub = { version = "0.4", default-features = false, features = ["ureq", "rustls-tls"], optional = true }
tokenizers = { version = "0.20", optional = true }

[[example]]
name = "bert_embed"
required-features = ["hub", "tokenizer"]

[[example]]
name = "bert_classify"
required-features = ["hub", "tokenizer"]

[[example]]
name = "bert_ner"
required-features = ["hub", "tokenizer"]

[[example]]
name = "bert_qa"
required-features = ["hub", "tokenizer"]

[[example]]
name = "roberta_embed"
required-features = ["hub", "tokenizer"]

[[example]]
name = "roberta_classify"
required-features = ["hub", "tokenizer"]

[[example]]
name = "roberta_ner"
required-features = ["hub", "tokenizer"]

[[example]]
name = "roberta_qa"
required-features = ["hub", "tokenizer"]

[[example]]
name = "distilbert_embed"
required-features = ["hub", "tokenizer"]

[[example]]
name = "distilbert_classify"
required-features = ["hub", "tokenizer"]

[[example]]
name = "distilbert_ner"
required-features = ["hub", "tokenizer"]

[[example]]
name = "distilbert_qa"
required-features = ["hub", "tokenizer"]

[[example]]
name = "auto_classify"
required-features = ["hub", "tokenizer"]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]
