[package]
name = "flodl-hf"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "HuggingFace integration for flodl: safetensors, hub, tokenizers, pre-built models"
readme = "README.md"
keywords = ["huggingface", "transformers", "safetensors", "deep-learning", "flodl"]
categories = ["science", "artificial-intelligence"]
include = [
    "src/**/*",
    "examples/*.rs",
    "tests/*.rs",
    "tests/common/**/*",
    "tests/fixtures/**/*",
    "README.md",
    "LICENSE",
    "Cargo.toml",
]

[features]
default = ["hub", "tokenizer"]
cuda = ["flodl/cuda"]
hub = ["hf-hub", "dep:flodl-cli"]
tokenizer = ["tokenizers"]

[dependencies]
flodl = { version = "=0.5.3", path = "../flodl" }
safetensors = "0.4"
serde_json = "1"
hf-hub = { version = "0.4", default-features = false, features = ["ureq", "rustls-tls"], optional = true }
tokenizers = { version = "0.20", optional = true }
# Optional, gated behind `hub`: lets the export_hf CLI binary use the
# FdlArgs derive so its --help output matches what `fdl flodl-hf export
# -h` renders. Pure-Rust dep; pulls no libtorch.
flodl-cli = { version = "=0.5.3", path = "../flodl-cli", optional = true }

[[example]]
name = "bert_embed"
required-features = ["hub", "tokenizer"]

[[example]]
name = "bert_classify"
required-features = ["hub", "tokenizer"]

[[example]]
name = "bert_ner"
required-features = ["hub", "tokenizer"]

[[example]]
name = "bert_qa"
required-features = ["hub", "tokenizer"]

[[example]]
name = "roberta_embed"
required-features = ["hub", "tokenizer"]

[[example]]
name = "roberta_classify"
required-features = ["hub", "tokenizer"]

[[example]]
name = "roberta_ner"
required-features = ["hub", "tokenizer"]

[[example]]
name = "roberta_qa"
required-features = ["hub", "tokenizer"]

[[example]]
name = "distilbert_embed"
required-features = ["hub", "tokenizer"]

[[example]]
name = "distilbert_classify"
required-features = ["hub", "tokenizer"]

[[example]]
name = "distilbert_ner"
required-features = ["hub", "tokenizer"]

[[example]]
name = "distilbert_qa"
required-features = ["hub", "tokenizer"]

[[example]]
name = "distilbert_finetune"
required-features = ["hub", "tokenizer"]

[[example]]
name = "auto_classify"
required-features = ["hub", "tokenizer"]

[[example]]
name = "export_hf"
required-features = ["hub"]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]
