[package]
name = "flodl-sys"
version = "0.1.0"
edition = "2024"
description = "Raw FFI bindings to libtorch via a thin C++ shim"
license = "MIT"
repository = "https://github.com/fab2s/floDl"
homepage = "https://flodl.dev"
keywords = ["deep-learning", "libtorch", "ffi"]
categories = ["external-ffi-bindings"]

[features]
default = []
cuda = []

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[build-dependencies]
cc = "1"
