[package]
name = "flodl-sys"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Raw FFI bindings to libtorch via a thin C++ shim"
keywords = ["deep-learning", "libtorch", "ffi"]
categories = ["external-ffi-bindings", "science::machine-learning"]
readme = "README.md"

[features]
default = []
cuda = []

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[build-dependencies]
cc = "1"
