[package]
name = "flodl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "floDl — a flow-graph deep learning framework built on libtorch"
readme = "../README.md"
keywords = ["deep-learning", "machine-learning", "neural-network", "libtorch", "graph"]
categories = ["science::machine-learning"]
include = [
    "src/**/*",
    "examples/**/*.rs",
    "examples/**/*.md",
    "Cargo.toml",
]

[features]
default = []
cuda = ["flodl-sys/cuda"]

[dependencies]
flodl-sys = { version = "0.1.0", path = "../flodl-sys" }
indexmap = "2"
flate2 = "1"
sha2 = "0.10"
serde_json = "1"

[package.metadata.docs.rs]
# docs.rs has no libtorch — build with this cfg so the -sys build.rs can skip compilation.
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[dev-dependencies]
