[package]
name = "flodl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "floDl — a flow-graph deep learning framework built on libtorch"
readme = "../README.md"
keywords = ["deep-learning", "machine-learning", "neural-network", "libtorch", "graph"]
categories = ["science", "artificial-intelligence"]
include = [
    "src/**/*",
    "examples/**/*.rs",
    "examples/**/*.md",
    "Cargo.toml",
]

[features]
default = []
cuda = ["flodl-sys/cuda"]

[dependencies]
flodl-sys = { version = "0.1.2", path = "../flodl-sys" }
indexmap = "2"
flate2 = "1"
hmac-sha256 = "1"
serde_json = "1"
rand = { version = "0.9", features = ["small_rng"] }

[package.metadata.docs.rs]
# docs.rs has no libtorch — build with this cfg so the -sys build.rs can skip compilation.
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[dev-dependencies]
