[package]
name = "flodl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "floDl — a flow-graph deep learning framework built on libtorch"
readme = "../README.md"
keywords = ["deep-learning", "machine-learning", "neural-network", "libtorch", "graph"]
categories = ["science", "artificial-intelligence"]
include = [
    "src/**/*",
    "examples/**/*.rs",
    "examples/**/*.md",
    "Cargo.toml",
]

[features]
default = ["rng"]
cuda = ["flodl-sys/cuda"]
rng = ["rand"]

[dependencies]
flodl-sys = { version = "0.3.0", path = "../flodl-sys" }
indexmap = "2"
flate2 = "1"
hmac-sha256 = "1"
serde_json = "1"
rand = { version = "0.9", features = ["small_rng"], optional = true }

[package.metadata.docs.rs]
# docs.rs has no libtorch — build with this cfg so the -sys build.rs can skip compilation.
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]
# rand 0.9 uses feature(doc_auto_cfg) which is removed in nightly 1.92+.
# Build without rng to avoid the breakage. Rng is included by default for users.
no-default-features = true

# Examples need libtorch — disable scraping on docs.rs to prevent build failures.
[[example]]
name = "quickstart"
path = "examples/quickstart/main.rs"
doc-scrape-examples = false

[[example]]
name = "sine_wave"
path = "examples/sine_wave/main.rs"
doc-scrape-examples = false

[[example]]
name = "mixed_precision"
path = "examples/mixed_precision/main.rs"
doc-scrape-examples = false

[[example]]
name = "transfer_learning"
path = "examples/transfer_learning/main.rs"
doc-scrape-examples = false

[[example]]
name = "schedulers"
path = "examples/schedulers/main.rs"
doc-scrape-examples = false

[[example]]
name = "observation"
path = "examples/observation/main.rs"
doc-scrape-examples = false

[[example]]
name = "showcase"
path = "examples/showcase/main.rs"
doc-scrape-examples = false

[dev-dependencies]
