[package]
name = "flodl-hf-playground"
version = "0.1.0"
edition = "2024"

[dependencies]
flodl = "={{FLODL_VERSION}}"
flodl-hf = "={{FLODL_VERSION}}"

# See README.md for feature flavors:
# - default ([hub, tokenizer]): full stack, loads "bert-base-uncased" out of the box
# - vision-only (default-features = false, features = ["hub"]): no tokenizer for ViT-style models
# - offline (default-features = false): safetensors loader only, no network

[profile.dev.package.flodl]
opt-level = 3

[profile.dev.package.flodl-sys]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1
